--- a/source/css/audiojs.css.sass
+++ b/source/css/audiojs.css.sass
@@ -2,7 +2,7 @@
   audio
     position: absolute
     left: -1px
-  width: 435px
+  width: 100%
   height: 25px
   background: none
   border: 1px solid LightGrey
@@ -47,7 +47,7 @@
   .scrubber
     position: relative
     float: left
-    width: 260px
+    width: 58%
     background: #CECECE
     height: 12px
     margin: 5px 5px
@@ -171,7 +171,8 @@
 .track-details
   clear: both
   height: 22px
-  width: 425px
+  box-sizing: border-box
+  width: 100%
   padding: 1px 6px
   background: #eee
   color: #222
