--- a/source/css/v2/objects/article.sass
+++ b/source/css/v2/objects/article.sass
@@ -1,6 +1,8 @@
 .article
   background: #fff
   border: 1px solid #e0e0e0
+  img
+    max-width: 100%
   .header
     background: #087c78
     color: #fff
