--- a/source/css/v2/objects/subscribe.sass
+++ b/source/css/v2/objects/subscribe.sass
@@ -1,8 +1,8 @@
 .subscribe
-  width: 960px
+  max-width: 960px
   margin: 0 auto
   text-align: right
-  padding: 14px 0
+  padding: 14px 20px
   .link
     display: inline-block
     padding: 9px 0
