--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="content">
   <div class="row">
-    <div class="col1of4">
+    <div class="col1of4 prs">
       <img src="<%= article.data.main_image || "http://placehold.it/200x150&text=[img]" %>" alt="<%= article.title %>" title="<%= article.title %>" />
     </div>
     <div class="col3of4">
