--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -9,7 +9,7 @@ title: "О нас"
   <div class="photo">
     <%= image_tag "about/alexey.png", alt: "Алексей Васильев" %>
   </div>
-  <div class="bio last-col">
+  <div class="bio">
     <h1 class="mbm">Алексей Васильев</h1>
     <div class="contacts">
       <a class="icon-twitter" href="https://twitter.com/leopard_me" target="_blank"></a>
