--- a/source/css/v2/layout.sass
+++ b/source/css/v2/layout.sass
@@ -15,19 +15,20 @@ header.header
   background: #e2dbcb
   height: 98px
   margin-bottom: 60px
+  .left-side, .right-side
+    padding: 36px 0
+    width: 37%
   .left-side
     float: left
-    width: 37%
     .navigation
       float: right
   .right-side
     float: right
-    width: 40%
     .navigation
       float: left
 
 .container
-  width: 960px
+  max-width: 960px
   margin: 0 auto
 
 .logo
@@ -45,6 +46,16 @@ header.header
     display: block
     height: 64px
 
+.mainbar
+  box-sizing: border-box
+  float: left
+  width: 66.6666%
+
+.sidebar
+  box-sizing: border-box
+  float: left
+  width: 33.3333%
+
 footer.footer
   background: #087c78
   color: #fff
@@ -58,3 +69,19 @@ footer.footer
       margin-left: 15px
     a
       color: #fff
+@media screen and (max-width: 940px)
+  header.header .left-side,
+  header.header .right-side
+    width: 34%
+
+@media screen and (max-width: 768px)
+  .mainbar
+    width: 100%
+    padding: 0
+  .sidebar
+    display: none
+  footer.footer
+    ul
+      display: none
+    .col1of2
+      width: 100%
