--- a/source/css/v2/objects/box.sass
+++ b/source/css/v2/objects/box.sass
@@ -23,3 +23,12 @@
         position: relative
         top: 1px
         margin-right: 5px
+
+@media screen and (max-width: 900px)
+  .column
+    width: 50%
+
+@media screen and (max-width: 768px)
+  .column
+    width: 100%
+    padding: 0
