--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,12 +4,12 @@ per_page: 10
 ---
 <% content_for :title, "" %>
 <div class="row mbm">
-  <div class="col2of3 prm">
+  <div class="mainbar prm">
     <article class="article">
       <%= partial "partials/article", locals: { article: page_articles.first } %>
     </article>
   </div>
-  <div class="col1of3 prm">
+  <div class="sidebar prm">
     <%= partial "partials/sidebar" %>
   </div>
 </div>
