--- a/source/css/v2/objects/navigation.sass
+++ b/source/css/v2/objects/navigation.sass
@@ -18,5 +18,47 @@
 @media screen and (max-width: 768px)
   .navigation
     display: none
+    top: 68px
+    left: 25px
+    position: absolute
+    background: #fff
+    width: 200px
+    box-shadow: 0 2px 4px rgba(0,0,0,0.15)
+    li
+      display: block
+      padding: 0 5px
+    a
+      display: block
+      padding: 8px 15px
+      border-radius: 2px
+      transition: background .3s ease
+      &:hover
+        background: #f4f2ec
+    .left-side &
+      padding-top: 5px
+      border-radius: 2px 2px 0 0
+      &:before, &:after
+        content: ""
+        position: absolute
+        bottom: 100%
+        left: 20px
+        border: solid transparent
+        height: 0
+        width: 0
+        pointer-events: none
+      &:before
+        margin-right: -2px
+        border-color: rgba(212,212,212, 0)
+        border-bottom-color: #ddd
+        border-width: 8px
+      &:after
+        border-color: rgba(255, 255, 255, 0)
+        border-bottom-color: #ffffff
+        border-width: 6px
+    .right-side &
+      top: 153px
+      padding-bottom: 5px
+      border-radius: 0 0 2px 2px
+
   .menu-toggle
     display: inline-block
