--- a/source/posts/2014/10-17-podcast-02-35.md.erb
+++ b/source/posts/2014/10-17-podcast-02-35.md.erb
@@ -24,6 +24,9 @@ main_image: "/images/static/02/0235.png"
  - [Sweet alert](http://tristanedwards.me/sweetalert)
  - [Perfmap](https://github.com/zeman/perfmap)
  - [noUiSlider](http://refreshless.com/nouislider/)
+ - [RWDPerf — тестирование производительности адаптивных сайтов](https://github.com/lafikl/RWDPerf)
+ - [Css:next — используйте синтаксис будущего CSS уже сегодня](http://cssnext.github.io/)
+ - [Csstyle — легкий статический фреймворк, основанный на SASS-миксинах](http://www.csstyle.io/)
 
 
 READMORE
