--- a/source/posts/2014/10-17-podcast-02-35.md.erb
+++ b/source/posts/2014/10-17-podcast-02-35.md.erb
@@ -16,17 +16,27 @@ main_image: "/images/static/02/0235.png"
 
 ## Ruby
 
+ - [How Does Rails Handle Gems?](http://www.justinweiss.com/blog/2014/10/13/how-does-rails-handle-gems/)
+ - [Polymorphic relations and DB consistency with ease? From now – yes!](http://blog.lunarlogic.io/2014/polymorphic-relations-and-db-consistency-with-ease-from-now-yes/)
+ - [Ruby's Unary Operators](http://www.rubyinside.com/rubys-unary-operators-and-how-to-redefine-their-functionality-5610.html)
+ - [POODLE Attack](https://poodle.io/)
+ - [Erik Michaels-Ober - Writing fast Ruby](https://www.youtube.com/watch?v=fGFM_UrSp70)
 
 ## JavaScript
 
+ - [AngularJS 1.3.0](http://angularjs.blogspot.de/2014/10/angularjs-130-superluminal-nudge.html)
+ - [ReactJS For Stupid People](http://blog.andrewray.me/reactjs-for-stupid-people/)
  - [Javascript: best practices part 1](http://www.thinkful.com/learn/javascript-best-practices-1/)
  - [Making Responsive HTML Emails](http://www.benjystanton.co.uk/blog/making-responsive-html-emails/)
+ - [Take Your Code to the Next Level with FKit](http://joshbassett.info/2014/take-your-code-to-the-next-level-with-fkit/)
+ - [Yama.js](http://celebio.github.io/Yama.js/)
  - [Sweet alert](http://tristanedwards.me/sweetalert)
  - [Perfmap](https://github.com/zeman/perfmap)
  - [noUiSlider](http://refreshless.com/nouislider/)
  - [RWDPerf — тестирование производительности адаптивных сайтов](https://github.com/lafikl/RWDPerf)
  - [Css:next — используйте синтаксис будущего CSS уже сегодня](http://cssnext.github.io/)
  - [Csstyle — легкий статический фреймворк, основанный на SASS-миксинах](http://www.csstyle.io/)
+ - [Format.js - internationalize your web apps on the client and server](http://formatjs.io/)
 
 
 READMORE
