--- a/source/posts/2014/10-17-cafe-004.md.erb
+++ b/source/posts/2014/10-17-cafe-004.md.erb
@@ -1,14 +1,14 @@
 ---
 title: "RWPod Кафе 4: Александр Паладий и Elixir"
-date: 2014-10-17
+date: 2014-10-17 00:00:00
 tags:
  - podcasts
  - cafe
-audio_url: "http://rwpod.podfm.ru/my/67/file/podfm_rwpod_my_20140719.mp3"
-audio_mirror: "https://www.dropbox.com/s/rf9hrtwe5w3o4ip/003.mp3?dl=1"
+audio_url: "http://rwpod.podfm.ru/my/78/file/podfm_rwpod_my_20141017.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/c004/004.mp3"
 audio_format: "audio/mpeg"
-audio_length: 54138534
-duration: "00:56:20"
+audio_length: 45591210
+duration: "00:47:26"
 small_icon: mic
 main_image: "/images/static/cafe/004.png"
 ---
