--- a/source/posts/2014/10-17-podcast-02-35.md.erb
+++ b/source/posts/2014/10-17-podcast-02-35.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "35 выпуск 02 сезона.  и прочее"
-date: 2014-10-17
+date: 2014-10-17 00:01:00
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/77/file/podfm_rwpod_my_34_77.mp3"
