--- a/source/posts/2014/10-27-podcast-02-35.md.erb
+++ b/source/posts/2014/10-27-podcast-02-35.md.erb
@@ -20,6 +20,8 @@ published: false
  - [POODLE Attack](https://poodle.io/) и [Ruby's Unary Operators](http://www.rubyinside.com/rubys-unary-operators-and-how-to-redefine-their-functionality-5610.html)
  - [Polymorphic relations and DB consistency with ease? From now – yes!](http://blog.lunarlogic.io/2014/polymorphic-relations-and-db-consistency-with-ease-from-now-yes/) и [How Does Rails Handle Gems?](http://www.justinweiss.com/blog/2014/10/13/how-does-rails-handle-gems/)
  - [Benefits of Writing a DSL in Ruby](http://engineering.zenpayroll.com/benefits-of-writing-a-dsl/?utm_source=rubyweekly&utm_medium=email)
+ - [Practicing Ruby - delightful lessons for dedicated programmers](https://practicingruby.com/)
+ - [Raptor - new Ruby web server](http://www.rubyraptor.org/)
  - [Erik Michaels-Ober - Writing fast Ruby](https://www.youtube.com/watch?v=fGFM_UrSp70)
 
 ## JavaScript
@@ -28,6 +30,9 @@ published: false
  - [Javascript: best practices part 1](http://www.thinkful.com/learn/javascript-best-practices-1/) и [Take Your Code to the Next Level with FKit](http://joshbassett.info/2014/take-your-code-to-the-next-level-with-fkit/)
  - [Csstyle — легкий статический фреймворк, основанный на SASS-миксинах](http://www.csstyle.io/), [Sweet alert](http://tristanedwards.me/sweetalert), [Css:next — используйте синтаксис будущего CSS уже сегодня](http://cssnext.github.io/)
  - [Format.js - internationalize your web apps on the client and server](http://formatjs.io/), [RWDPerf — тестирование производительности адаптивных сайтов](https://github.com/lafikl/RWDPerf) и [Perfmap](https://github.com/zeman/perfmap)
+ - [Cylon.js - JavaScript Robotics](http://cylonjs.com/)
+ - [ZorroSVG](http://quasimondo.com/ZorroSVG/)
+ - [JavaScript compatibility checker](http://jscc.info/)
 
 
 READMORE
