--- a/source/posts/2014/10-27-podcast-02-35.md.erb
+++ b/source/posts/2014/10-27-podcast-02-35.md.erb
@@ -17,22 +17,19 @@ published: false
 
 ## Ruby
 
+ - Релизы Ruby [1.9.3-p550](https://www.ruby-lang.org/en/news/2014/10/27/ruby-1-9-3-p550-is-released/), [2.0.0-p594](https://www.ruby-lang.org/en/news/2014/10/27/ruby-2-0-0-p594-is-released/) и [2.1.4](https://www.ruby-lang.org/en/news/2014/10/27/ruby-2-1-4-released/)
  - [POODLE Attack](https://poodle.io/) и [Ruby's Unary Operators](http://www.rubyinside.com/rubys-unary-operators-and-how-to-redefine-their-functionality-5610.html)
  - [Polymorphic relations and DB consistency with ease? From now – yes!](http://blog.lunarlogic.io/2014/polymorphic-relations-and-db-consistency-with-ease-from-now-yes/) и [How Does Rails Handle Gems?](http://www.justinweiss.com/blog/2014/10/13/how-does-rails-handle-gems/)
- - [Benefits of Writing a DSL in Ruby](http://engineering.zenpayroll.com/benefits-of-writing-a-dsl/?utm_source=rubyweekly&utm_medium=email)
- - [Practicing Ruby - delightful lessons for dedicated programmers](https://practicingruby.com/)
- - [Raptor - new Ruby web server](http://www.rubyraptor.org/)
- - [Erik Michaels-Ober - Writing fast Ruby](https://www.youtube.com/watch?v=fGFM_UrSp70)
+ - [Benefits of Writing a DSL in Ruby](http://engineering.zenpayroll.com/benefits-of-writing-a-dsl/?utm_source=rubyweekly&utm_medium=email) и [Raptor - new Ruby web server](http://www.rubyraptor.org/)
+ - [Practicing Ruby - delightful lessons for dedicated programmers](https://practicingruby.com/) и [Erik Michaels-Ober - Writing fast Ruby](https://www.youtube.com/watch?v=fGFM_UrSp70)
 
 ## JavaScript
 
  - [AngularJS 1.3.0](http://angularjs.blogspot.de/2014/10/angularjs-130-superluminal-nudge.html) и [ReactJS For Stupid People](http://blog.andrewray.me/reactjs-for-stupid-people/)
- - [Javascript: best practices part 1](http://www.thinkful.com/learn/javascript-best-practices-1/) и [Take Your Code to the Next Level with FKit](http://joshbassett.info/2014/take-your-code-to-the-next-level-with-fkit/)
+ - [Javascript: best practices part 1](http://www.thinkful.com/learn/javascript-best-practices-1/), [Take Your Code to the Next Level with FKit](http://joshbassett.info/2014/take-your-code-to-the-next-level-with-fkit/) и [JavaScript compatibility checker](http://jscc.info/)
  - [Csstyle — легкий статический фреймворк, основанный на SASS-миксинах](http://www.csstyle.io/), [Sweet alert](http://tristanedwards.me/sweetalert), [Css:next — используйте синтаксис будущего CSS уже сегодня](http://cssnext.github.io/)
  - [Format.js - internationalize your web apps on the client and server](http://formatjs.io/), [RWDPerf — тестирование производительности адаптивных сайтов](https://github.com/lafikl/RWDPerf) и [Perfmap](https://github.com/zeman/perfmap)
- - [Cylon.js - JavaScript Robotics](http://cylonjs.com/)
- - [ZorroSVG](http://quasimondo.com/ZorroSVG/)
- - [JavaScript compatibility checker](http://jscc.info/)
+ - [Cylon.js - JavaScript Robotics](http://cylonjs.com/), [ZorroSVG](http://quasimondo.com/ZorroSVG/) и [Data Visualization with JavaScript](http://jsdatav.is/intro.html)
 
 
 READMORE
