--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -7,7 +7,7 @@ title: "О нас"
 
 <div class="author mbl">
   <div class="photo">
-    <%= image_tag "about/alexey.png", alt: "Алексей Васильев" %>
+    <%= image_tag "about/alexey.png", alt: "Алексей Васильев", title: "Алексей Васильев" %>
   </div>
   <div class="bio">
     <h1 class="mbm">Алексей Васильев</h1>
@@ -41,6 +41,6 @@ title: "О нас"
     <p>Александр является инструктором по верстке в компании Railsware.</p>
   </div>
   <div class="photo">
-    <%= image_tag "about/alex.png", alt: "Александр Чаплинский" %>
+    <%= image_tag "about/alex.png", alt: "Александр Чаплинский", title: "Александр Чаплинский" %>
   </div>
 </div>
