--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -1,3 +1,4 @@
+<%# encoding: utf-8 %>
 ---
 pageable: true
 per_page: 50
@@ -15,17 +16,8 @@ per_page: 50
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %>&nbsp;<span><%= article.date.strftime('%b %d') %></span></li>
+    <li><%= link_to article.title, article %>&nbsp;<span><%= article_short_date(article) %></span></li>
   <% end %>
 </ul>
 
-<% if paginate %>
-  <ul class="pagination">
-    <% if prev_page %>
-      <li><%= link_to '&laquo; Позже', prev_page %></li>
-    <% end %>
-    <% if next_page %>
-      <li><%= link_to 'Раньше &raquo;', next_page %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= partial "partials/pagination", locals: { paginate: paginate, prev_page: prev_page, next_page: next_page } %>
