--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,51 +1,46 @@
+<%# encoding: utf-8 %>
 ---
 pageable: true
 per_page: 10
 ---
 <% content_for :title, "" %>
-<div class="row mbm">
-  <div class="mainbar prm">
-    <article class="article">
-      <%= partial "partials/article", locals: { article: page_articles.first } %>
-    </article>
-  </div>
-  <div class="sidebar prm">
-    <%= partial "partials/sidebar" %>
-  </div>
-</div>
-<div class="row mbm">
-  <% page_articles[1..-1].each_with_index do |article, i| %>
-    <div class="column">
-      <div class="box">
-        <div class="header row">
-          <div class="left"><%= article.title.split('.')[0] %></div>
-          <% if article.title.split('.')[0].size < 20%>
-            <div class="right"><small><%= article.date.strftime('%d.%m.%Y') %></small></div>
-          <%end%>
-        </div>
-        <div class="content">
-          <h2>
-            <% link_to article do %>
-              <%= article.title %>
-            <% end %>
-          </h2>
-        </div>
-        <div class="footer">
-          <%= link_to "0 Comments and 0 Reactions", "#{default_main_url_helper}#{article.url}#disqus_thread", class: 'icon-chat' %>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
-<div class="row prm">
-  <% if paginate %>
-    <div class="pagination right">
-      <% if prev_page %>
-        <%= link_to '&laquo; Позже', prev_page, class: 'button' %>
-      <% end %>
-      <% if next_page %>
-        <%= link_to 'Раньше &raquo;', next_page, class: 'button' %>
+
+<% if prev_page %>
+
+  <div class="row mbm">
+    <div class="mainbar row prm">
+      <% page_articles[0..3].each_with_index do |article, i| %>
+        <%= partial "partials/article_box", object: article %>
       <% end %>
     </div>
-  <% end %>
-</div>
+    <div class="sidebar prm">
+      <%= partial "partials/sidebar" %>
+    </div>
+  </div>
+  <div class="row mbm">
+    <% page_articles[4..-1].each_with_index do |article, i| %>
+      <%= partial "partials/article_box", object: article %>
+    <% end %>
+  </div>
+
+<% else %>
+
+  <div class="row mbm">
+    <div class="mainbar prm">
+      <article class="article">
+        <%= partial "partials/article", object: page_articles.first %>
+      </article>
+    </div>
+    <div class="sidebar prm">
+      <%= partial "partials/sidebar" %>
+    </div>
+  </div>
+  <div class="row mbm">
+    <% page_articles[1..-1].each_with_index do |article, i| %>
+      <%= partial "partials/article_box", object: article %>
+    <% end %>
+  </div>
+
+<% end %>
+
+<%= partial "partials/pagination", locals: { paginate: paginate, prev_page: prev_page, next_page: next_page } %>
