--- a/source/js/rwpod_settings.js.coffee.erb
+++ b/source/js/rwpod_settings.js.coffee.erb
@@ -1,3 +1,3 @@
-root = global ? window
+root = (exports ? this)
 
 root.audioImageLocation = "<%= asset_url "images/audiojs/player-graphics.gif" %>"
