--- a/source/css/v2/typography.sass
+++ b/source/css/v2/typography.sass
@@ -1,12 +1,13 @@
 body
   font-family: 'Helvetica Neue', Helvetica, sans-serif
   font-size: 1rem
-  font-weight: 300
+  font-weight: 400
   line-height: 1.5rem
   color: #333
 
 h1
   font-size: 1.25rem
+  font-weight: 500
 
 h2
   font-size: 1.125rem
@@ -19,7 +20,7 @@ small
   font-size: .85rem
 
 a
-  color: #4f4436
+  color: #087c78
   &:hover
     color: #a53719
 
