--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ per_page: 10
     <div class="mainbar row prm">
       <% page_articles[0..3].each_with_index do |article, i| %>
         <%= partial "partials/article_box", object: article %>
-      <% end %>
+      <% end if page_articles[0..3] && page_articles[0..3].size > 0 %>
     </div>
     <div class="sidebar prm">
       <%= partial "partials/sidebar" %>
@@ -20,7 +20,7 @@ per_page: 10
   <div class="row mbm">
     <% page_articles[4..-1].each_with_index do |article, i| %>
       <%= partial "partials/article_box", object: article %>
-    <% end %>
+    <% end if page_articles[4..-1] && page_articles[4..-1].size > 0 %>
   </div>
 
 <% else %>
@@ -38,7 +38,7 @@ per_page: 10
   <div class="row mbm">
     <% page_articles[1..-1].each_with_index do |article, i| %>
       <%= partial "partials/article_box", object: article %>
-    <% end %>
+    <% end if page_articles[1..-1] && page_articles[1..-1].size > 0 %>
   </div>
 
 <% end %>
