--- a/source/posts/2014/11-02-podcast-02-36.md.erb
+++ b/source/posts/2014/11-02-podcast-02-36.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "36 выпуск 02 сезона.  и прочее"
+title: "36 выпуск 02 сезона. Rubinius 2.3.0, Lita 4.0, Zopfli-ffi, Kleisli, React 0.12, Walkway.js, Immutable.js и прочее"
 date: 2014-11-02
 tags:
  - podcasts
@@ -16,14 +16,15 @@ main_image: "/images/static/02/0236.png"
 
 ## Ruby
 
- - Релиз [Rubinius 2.3.0](https://github.com/rubinius/rubinius/releases/tag/v2.3.0)
+ - Релизы [Rubinius 2.3.0](https://github.com/rubinius/rubinius/releases/tag/v2.3.0) и [Lita 4.0](http://docs.lita.io/releases/4/)
  - [Ruby is about to get red hot. Again](http://astonj.com/tech/ruby-is-about-to-get-red-hot-again/)
- - [Zopfli-ffi - Ruby wrapper for zopfli library](http://leopard.in.ua/2014/10/29/zopfli-ffi/)
- - [Kleisli - usable, idiomatic common monads in Ruby](http://blog.txus.io/kleisli/) и [Osquery - SQL powered operating system instrumentation and analytics](http://osquery.io/)
+ - [Zopfli-ffi - Ruby wrapper for zopfli library](http://leopard.in.ua/2014/10/29/zopfli-ffi/) и [ENVied, or how I stopped worrying about Ruby's ENV](http://www.gertgoet.com/2014/10/14/envied-or-how-i-stopped-worrying-about-ruby-s-env.html)
+ - [Kleisli - usable, idiomatic common monads in Ruby](http://blog.txus.io/kleisli/), [Ognivo](https://github.com/antlypls/ognivo) и [Osquery - SQL powered operating system instrumentation and analytics](http://osquery.io/)
 
 ## JavaScript
 
  - [How Google broke the OSS compact with Angular 2.0](http://codebetter.com/johnvpetersen/2014/10/27/how-google-broke-the-oss-compact-with-angular-2-0/) и [Meteor 1.0](https://www.meteor.com/)
+ - [Statically typed JavaScript via Microsoft TypeScript, Facebook Flow and Google AtScript](http://www.2ality.com/2014/10/typed-javascript.html) и [Why we should stop using Grunt and Gulp](http://blog.keithcirkel.co.uk/why-we-should-stop-using-grunt/)
  - [React 0.12](http://facebook.github.io/react/blog/2014/10/28/react-v0.12.html) и [React (and why it’s awesome)](http://www.normative.com/react-and-why-its-awesome/)
  - [Walkway.js - an easy way to animate SVG images consisting of line and path elements](http://www.connoratherton.com/walkway) и [Immutable.js](http://facebook.github.io/immutable-js/)
  - [Tim Taubert: Keeping secrets with JavaScript (video)](https://www.youtube.com/watch?v=yf4m9LdO1zI)
