--- a/source/posts/2014/11-02-podcast-02-36.md.erb
+++ b/source/posts/2014/11-02-podcast-02-36.md.erb
@@ -18,7 +18,7 @@ main_image: "/images/static/02/0236.png"
 
  - Релизы [Rubinius 2.3.0](https://github.com/rubinius/rubinius/releases/tag/v2.3.0) и [Lita 4.0](http://docs.lita.io/releases/4/)
  - [Ruby is about to get red hot. Again](http://astonj.com/tech/ruby-is-about-to-get-red-hot-again/)
- - [Zopfli-ffi - Ruby wrapper for zopfli library](http://leopard.in.ua/2014/10/29/zopfli-ffi/) и [ENVied, or how I stopped worrying about Ruby's ENV](http://www.gertgoet.com/2014/10/14/envied-or-how-i-stopped-worrying-about-ruby-s-env.html)
+ - [ENVied, or how I stopped worrying about Ruby's ENV](http://www.gertgoet.com/2014/10/14/envied-or-how-i-stopped-worrying-about-ruby-s-env.html) и [Zopfli-ffi - Ruby wrapper for zopfli library](http://leopard.in.ua/2014/10/29/zopfli-ffi/)
  - [Kleisli - usable, idiomatic common monads in Ruby](http://blog.txus.io/kleisli/), [Ognivo](https://github.com/antlypls/ognivo) и [Osquery - SQL powered operating system instrumentation and analytics](http://osquery.io/)
 
 ## JavaScript
