--- a/source/posts/2014/11-02-podcast-02-36.md.erb
+++ b/source/posts/2014/11-02-podcast-02-36.md.erb
@@ -16,7 +16,7 @@ main_image: "/images/static/02/0236.png"
 
 ## Ruby
 
- - Релизы [Rubinius 2.3.0](https://github.com/rubinius/rubinius/releases/tag/v2.3.0) и [Lita 4.0](http://docs.lita.io/releases/4/)
+ - Релизы [Rails 3.2.20, 4.0.11, 4.1.7, 4.2.0.beta3](http://weblog.rubyonrails.org/2014/10/30/Rails_3_2_20_4_0_11_4_1_7_and_4_2_0_beta3_have_been_released/), [Rubinius 2.3.0](https://github.com/rubinius/rubinius/releases/tag/v2.3.0) и [Lita 4.0](http://docs.lita.io/releases/4/)
  - [Ruby is about to get red hot. Again](http://astonj.com/tech/ruby-is-about-to-get-red-hot-again/)
  - [ENVied, or how I stopped worrying about Ruby's ENV](http://www.gertgoet.com/2014/10/14/envied-or-how-i-stopped-worrying-about-ruby-s-env.html) и [Zopfli-ffi - Ruby wrapper for zopfli library](http://leopard.in.ua/2014/10/29/zopfli-ffi/)
  - [Kleisli - usable, idiomatic common monads in Ruby](http://blog.txus.io/kleisli/), [Ognivo](https://github.com/antlypls/ognivo) и [Osquery - SQL powered operating system instrumentation and analytics](http://osquery.io/)
