Fixed boxes layout on  non-first page

--- a/source/css/v2/objects/box.sass
+++ b/source/css/v2/objects/box.sass
@@ -23,7 +23,8 @@
         position: relative
         top: 1px
         margin-right: 5px
-
+  .mainbar.quatro &
+    width: 50%
 @media screen and (max-width: 900px)
   .column
     width: 50%
