--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@ per_page: 10
 <% if prev_page %>
 
   <div class="row mbm">
-    <div class="mainbar row prm">
+    <div class="mainbar quatro row prm">
       <% page_articles[0..3].each_with_index do |article, i| %>
         <%= partial "partials/article_box", object: article %>
       <% end if page_articles[0..3] && page_articles[0..3].size > 0 %>
