--- a/source/posts/2014/11-09-podcast-02-37.md.erb
+++ b/source/posts/2014/11-09-podcast-02-37.md.erb
@@ -18,19 +18,15 @@ main_image: "/images/static/02/0237.png"
 
  - [Configure Ruby Module](http://kirillplatonov.com/2014/11/08/configure_ruby_module/) и [ActiveModel::Serializers vs Jbuilder](http://kirillplatonov.com/2014/11/04/active_model_serializer_vs_jbuilder)
  - [Rails JS frameworks: Ember.js vs. AngularJS](http://www.airpair.com/ruby-on-rails/posts/ember-vs-angular-with-rails) и [The Top Mistakes Developers Make Using Ember and Rails](http://www.airpair.com/ember.js/posts/top-mistakes-ember-rails#/uvit75xR6dAUoIbF.99)
- - [Benchmarking Rack Middleware](https://engineering.heroku.com/blogs/2014-11-03-benchmarking-rack-middleware)
- - [The Definitive Guide to Ruby's C API](http://silverhammermba.github.io/emberb/)
+ - [Benchmarking Rack Middleware](https://engineering.heroku.com/blogs/2014-11-03-benchmarking-rack-middleware), [The Definitive Guide to Ruby's C API](http://silverhammermba.github.io/emberb/)
  - [4 Fantastic Ways to Set Up State in Minitest](http://chriskottom.com/blog/2014/10/4-fantastic-ways-to-set-up-state-in-minitest/)
 
 ## JavaScript
 
  - [All About Angular 2.0](http://eisenbergeffect.bluespire.com/all-about-angular-2-0/)
- - [TicTic - your pregnancy ticker](http://tictic.issaqandil.com/)
- - [LokiJS - fast, in-memory document-oriented datastore for node.js and browser](http://lokijs.org/)
- - [McFly - Flux Architecture Made Easy](http://kenwheeler.github.io/mcfly/)
- - [Pocket Guide to Writing SVG](http://svgpocketguide.com/book/)
- - [Cssplot — графики на чистом CSS](http://asciimoo.github.io/cssplot/)
- - ["Анти-герой" верстки в CSS — display:table](http://colintoh.com/blog/display-table-anti-hero)
+ - [LokiJS - fast, in-memory document-oriented datastore for node.js and browser](http://lokijs.org/) и [McFly - Flux Architecture Made Easy](http://kenwheeler.github.io/mcfly/)
+ - [Pocket Guide to Writing SVG](http://svgpocketguide.com/book/) и [TicTic - your pregnancy ticker](http://tictic.issaqandil.com/)
+ - ["Анти-герой" верстки в CSS — display:table](http://colintoh.com/blog/display-table-anti-hero) и [Cssplot — графики на чистом CSS](http://asciimoo.github.io/cssplot/)
 
 READMORE
 
