--- a/source/posts/2014/11-09-podcast-02-37.md.erb
+++ b/source/posts/2014/11-09-podcast-02-37.md.erb
@@ -25,7 +25,7 @@ main_image: "/images/static/02/0237.png"
 
  - [All About Angular 2.0](http://eisenbergeffect.bluespire.com/all-about-angular-2-0/)
  - [LokiJS - fast, in-memory document-oriented datastore for node.js and browser](http://lokijs.org/) и [McFly - Flux Architecture Made Easy](http://kenwheeler.github.io/mcfly/)
- - [Pocket Guide to Writing SVG](http://svgpocketguide.com/book/) и [TicTic - your pregnancy ticker](http://tictic.issaqandil.com/)
+ - [Pocket Guide to Writing SVG](http://svgpocketguide.com/book/), [Swing - swipeable cards interface](https://github.com/gajus/swing) и [TicTic - your pregnancy ticker](http://tictic.issaqandil.com/)
  - ["Анти-герой" верстки в CSS — display:table](http://colintoh.com/blog/display-table-anti-hero) и [Cssplot — графики на чистом CSS](http://asciimoo.github.io/cssplot/)
 
 READMORE
