--- a/source/posts/2014/11-09-podcast-02-37.md.erb
+++ b/source/posts/2014/11-09-podcast-02-37.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "37 выпуск 02 сезона. и прочее"
+title: "37 выпуск 02 сезона. Configure Ruby Module, Benchmarking Rack Middleware, All About Angular 2.0, LokiJS, Swing и прочее"
 date: 2014-11-09
 tags:
  - podcasts
