--- a/source/posts/2014/11-17-podcast-02-38.md.erb
+++ b/source/posts/2014/11-17-podcast-02-38.md.erb
@@ -16,6 +16,8 @@ main_image: "/images/static/02/0238.png"
 
 ## Ruby
 
+ - [How we’ve made Raptor up to 4x faster than Unicorn, up to 2x faster than Puma, Torquebox](http://www.rubyraptor.org/how-we-made-raptor-up-to-4x-faster-than-unicorn-and-up-to-2x-faster-than-puma-torquebox/)
+
 ## JavaScript
 
  - [Firefox Developer Edition](https://www.mozilla.org/en-US/firefox/developer/)
