--- a/source/posts/2014/11-17-podcast-02-38.md.erb
+++ b/source/posts/2014/11-17-podcast-02-38.md.erb
@@ -17,6 +17,7 @@ main_image: "/images/static/02/0238.png"
 ## Ruby
 
  - Релизы [Ruby 1.9.3-p551](https://www.ruby-lang.org/en/news/2014/11/13/ruby-1-9-3-p551-is-released/), [Ruby 2.0.0-p598](https://www.ruby-lang.org/en/news/2014/11/13/ruby-2-0-0-p598-is-released/) и [Ruby 2.1.5](https://www.ruby-lang.org/en/news/2014/11/13/ruby-2-1-5-is-released/)
+ - [Healthy migration habits](http://blog.testdouble.com/posts/2014-11-04-healthy-migration-habits.html)
  - [How we’ve made Raptor up to 4x faster than Unicorn, up to 2x faster than Puma, Torquebox](http://www.rubyraptor.org/how-we-made-raptor-up-to-4x-faster-than-unicorn-and-up-to-2x-faster-than-puma-torquebox/)
 
 ## JavaScript
