--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -5,7 +5,7 @@
 <div class="content">
   <div class="row">
     <div class="col1of4 prs">
-      <%= image_tag (article.data.main_image || "http://placehold.it/200x150&text=[img]"), alt: article.title, title: article.title, width: '132', height: '132' %>
+      <%= image_tag (article.data.main_image || "http://placehold.it/200x200&text=RWpod"), alt: article.title, title: article.title, width: '132', height: '132' %>
     </div>
     <div class="col3of4">
       <h1 class="mbs">
