--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -18,8 +18,8 @@ title: "О нас"
       <a class="icon-facebook" href="http://www.facebook.com/leopard.not.a" target="_blank"></a>
       <a class="icon-google-plus" href="https://plus.google.com/108647800055603756903/about" target="_blank"></a>
     </div>
-    <p>Ruby on Rails разработчик и Linux администратор в компании Railsware. Является автором таких продуктов как: <a href="http://popcornua.coocoorooza.com/">PopCornUA</a>, <a href="http://mongodb-logger.catware.org/">MongodbLogger</a>, <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a> и многих других.</p>
-    <p>Алексей является автором открытого учебного пособия по <a href="http://postgresql.leopard.in.ua">PostgreSQL на русском языке</a>. Активный докладчик в различных IT конференциях.</p>
+    <p>Ruby on Rails разработчик и Linux администратор в компании Railsware. Является автором таких продуктов как: <a href="http://popcornua.coocoorooza.com/">PopCornUA</a>, <a href="http://mongodb-logger.catware.org/">MongodbLogger</a>, <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a>, <a href="http://leopard.in.ua/webp-ffi/">Webp-ffi</a>, <a href="http://leopard.in.ua/zopfli-ffi/">Zopfli-ffi</a> и многих других.</p>
+    <p>Алексей является автором открытого учебного пособия по <a href="http://postgresql.leopard.in.ua">PostgreSQL на русском языке</a> и по <a href="http://chef.leopard.in.ua">Chef на английском языке</a>. Активный докладчик в различных IT конференциях.</p>
   </div>
 </div>
 
