--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -2,5 +2,5 @@
   <%= link_to '', (defined?(rss_path) ? "#{default_itunes_url_helper}#{rss_path}" : "https://itunes.apple.com/ru/podcast/rwpod-podkast-pro-mir-ruby/id597248066"), class: "link icon-apple" %>
   <%= link_to '', "#{default_feeds_url_helper}#{defined?(rss_path) ? rss_path : "/rwpod"}", class: "link icon-rss" %>
   <%= link_to '', 'https://twitter.com/rwpod', class: "link icon-twitter" %>
-  <%= link_to '', 'http://www.facebook.com/rwpod', class: "link icon-facebook" %>
+  <!--<%= link_to '', 'http://www.facebook.com/rwpod', class: "link icon-facebook" %>-->
 </div>
