--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -3,7 +3,7 @@
 pageable: true
 per_page: 50
 ---
-<h1>Архив за
+<h1 class="tags-title">Архив за
   <% case page_type
      when 'day' %>
     <%= Date.new(year, month, day).strftime('%b %e %Y') %>
@@ -14,7 +14,7 @@ per_page: 50
   <% end %>
 </h1>
 
-<ul>
+<ul class="tags-list">
   <% page_articles.each_with_index do |article, i| %>
     <li><%= link_to article.title, article %>&nbsp;<span><%= article_short_date(article) %></span></li>
   <% end %>
