--- a/source/css/v2/objects/navigation.sass
+++ b/source/css/v2/objects/navigation.sass
@@ -10,6 +10,10 @@
     &:hover
       color: #333
 
+.navigation .active a
+  color: #a53719
+  font-weight: 500
+
 .menu-toggle
   display: none
   font-size: 1.5rem
