--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -11,9 +11,9 @@ per_page: 25
   <% end %>
 <% end %>
 
-<h1>Тег '<%= tagname %>'</h1>
+<h1 class="tags-title">Тег '<%= tagname %>'</h1>
 
-<ul>
+<ul class="tags-list">
   <% page_articles.each_with_index do |article, i| %>
     <li><%= link_to article.title, article %>&nbsp;<span><%= article_short_date(article) %></span></li>
   <% end %>
