--- a/source/css/v2/objects/subscribe.sass
+++ b/source/css/v2/objects/subscribe.sass
@@ -14,4 +14,4 @@
     margin-right: 5px
     transition: background .3s ease
     &:hover
-      background: lighten(#d26748, 5%)
+      background: darken(#d26748, 15%)
