--- a/source/css/v2/objects/icons.scss
+++ b/source/css/v2/objects/icons.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'rwpod';
-  src: url('../../font/rwpod.eot?45153255');
-  src: url('../../font/rwpod.eot?45153255#iefix') format('embedded-opentype'),
-       url('../../font/rwpod.svg?45153255#rwpod') format('svg');
+  src: font-path('rwpod.eot?45153255');
+  src: font-path('rwpod.eot?45153255#iefix') format('embedded-opentype'),
+       font-path('rwpod.svg?45153255#rwpod') format('svg');
   font-weight: normal;
   font-style: normal;
 }
