fix no solution

--- a/source/css/audio.css.sass
+++ b/source/css/audio.css.sass
@@ -166,6 +166,12 @@
 /* TIME HOLDER
  *-----------------------------------------------
 
+.jp-no-solution
+  color: #000
+  font-size: 0.8rem
+  span
+    color: #C00
+
 
 .track-details
   text-align: center
