fix mobile icon

--- a/source/partials/_header_bar.html.erb
+++ b/source/partials/_header_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="left-side">
-  <a href="#" class="menu-toggle icon-navicon"></a>
+  <a href="#" class="menu-toggle icon-menu"></a>
   <ul class="navigation">
     <li class="name <%= current_link_class("index.html") %>"><%= link_to 'Главная', '/' %></li>
     <li class="<%= current_link_class("about.html") %>"><%= link_to 'О нас', '/about.html' %></li>
