--- a/source/posts/2014/11-17-podcast-02-38.md.erb
+++ b/source/posts/2014/11-17-podcast-02-38.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "38 выпуск 02 сезона. и прочее"
+title: "38 выпуск 02 сезона. Релизы Ruby 2.0.0-p598, 2.1.5, Healthy migration habits, Firefox Developer Edition, Imagejs и прочее"
 date: 2014-11-17
 tags:
  - podcasts
