--- a/source/posts/2014/12-08-podcast-02-41.md.erb
+++ b/source/posts/2014/12-08-podcast-02-41.md.erb
@@ -25,7 +25,7 @@ main_image: "/images/static/02/0241.png"
 
  - [Flexbox as a solution for browser reflow optimization](http://railsware.com/blog/2014/12/02/flexbox-as-a-solution-for-browser-reflow-optimization/) и [Regulex - JavaScript Regular Expression Visualizer](http://jex.im/regulex/)
  - [Duktape is an embeddable Javascript engine](http://duktape.org/), [MetricsGraphics.js](http://metricsgraphicsjs.org/) и [PhysicsJS](http://wellcaffeinated.net/PhysicsJS/)
- - [RoadTrafficSimulator](http://volkhin.com/RoadTrafficSimulator/) и [Tappy - is a JavaScript library for recording and comparing rhythms](http://tappy.pw/)
+ - [RoadTrafficSimulator](http://volkhin.com/RoadTrafficSimulator/), [PhotoSwipe - JavaScript gallery](http://photoswipe.com/) и [Tappy - is a JavaScript library for recording and comparing rhythms](http://tappy.pw/)
  - [Siesta - Object Mapping for Javascript](http://mtford.co.uk/siesta/) и [ObjectDB – an easier way to use indexedDB](http://objectdb.kganser.com/)
 
 
