--- a/source/posts/2014/12-14-podcast-02-42.md.erb
+++ b/source/posts/2014/12-14-podcast-02-42.md.erb
@@ -23,6 +23,7 @@ main_image: "/images/static/02/0242.png"
 
 ## JavaScript
 
+ - [What is io.js?](http://blog.izs.me/post/104685388058/io-js)
  - [Lazy-loading Google Maps](http://osvaldas.info/lazy-loading-google-maps)
  - [TouchstoneJS - ReactJS powered UI framework for developing beautiful hybrid mobile apps](http://touchstonejs.io/)
  - [The offline cookbook](http://jakearchibald.com/2014/offline-cookbook/) и [Async != Fast](http://dev.hubspot.com/blog/async-fast)
