--- a/source/posts/2014/12-14-podcast-02-42.md.erb
+++ b/source/posts/2014/12-14-podcast-02-42.md.erb
@@ -24,9 +24,9 @@ main_image: "/images/static/02/0242.png"
 ## JavaScript
 
  - [What is io.js?](http://blog.izs.me/post/104685388058/io-js)
- - [Lazy-loading Google Maps](http://osvaldas.info/lazy-loading-google-maps)
- - [TouchstoneJS - ReactJS powered UI framework for developing beautiful hybrid mobile apps](http://touchstonejs.io/)
+ - [TouchstoneJS - ReactJS powered UI framework for developing beautiful hybrid mobile apps](http://touchstonejs.io/) и [Lazy-loading Google Maps](http://osvaldas.info/lazy-loading-google-maps)
  - [The offline cookbook](http://jakearchibald.com/2014/offline-cookbook/) и [Async != Fast](http://dev.hubspot.com/blog/async-fast)
+ - [Understanding CSS Stats: How to Make the Most of the Numbers](http://webdesign.tutsplus.com/tutorials/understanding-css-stats-how-to-make-the-most-of-the-numbers--cms-22756)
 
 
 READMORE
