--- a/source/posts/2014/12-14-podcast-02-42.md.erb
+++ b/source/posts/2014/12-14-podcast-02-42.md.erb
@@ -20,6 +20,7 @@ main_image: "/images/static/02/0242.png"
  - [Cake walk: Using bower with rails](http://crypt.codemancers.com/posts/2014-12-10-bower-with-rails/) и [Middleman Tricks and Hacks](http://willschenk.com/middleman-tricks-and-hacks/)
  - [Traveling Ruby](http://phusion.github.io/traveling-ruby/) и [DRY in you Ruby modules](https://medium.com/@KamilLelonek/ruby-module-tricks-and-gravatar-url-generator-56235cb73403)
  - [Refile - modern file upload library](https://github.com/elabs/refile) и [Progress bar for shell apps](http://shiroyasha.github.io/progressbar-for-shell-apps.html)
+ - [Ruby Conference 2014 videos](http://confreaks.com/events/RubyConf2014)
 
 ## JavaScript
 
@@ -27,6 +28,7 @@ main_image: "/images/static/02/0242.png"
  - [TouchstoneJS - ReactJS powered UI framework for developing beautiful hybrid mobile apps](http://touchstonejs.io/) и [Lazy-loading Google Maps](http://osvaldas.info/lazy-loading-google-maps)
  - [The offline cookbook](http://jakearchibald.com/2014/offline-cookbook/) и [Async != Fast](http://dev.hubspot.com/blog/async-fast)
  - [Understanding CSS Stats: How to Make the Most of the Numbers](http://webdesign.tutsplus.com/tutorials/understanding-css-stats-how-to-make-the-most-of-the-numbers--cms-22756)
+ - [A pragmatic guide to Backbone.js apps](http://pragmatic-backbone.com/) и [Simple ReactJS HTML5 audio player](https://chadpaulson.github.io/react-cassette-player/)
 
 
 READMORE
