--- a/source/posts/2014/12-21-podcast-02-43.md.erb
+++ b/source/posts/2014/12-21-podcast-02-43.md.erb
@@ -16,7 +16,7 @@ main_image: "/images/static/02/0243.png"
 
 ## Ruby
 
-
+ - Релизы [Rails 4.2](http://weblog.rubyonrails.org/2014/12/19/Rails-4-2-final/) и [PostgreSQL 9.4](http://www.postgresql.org/about/news/1557/)
 
 ## JavaScript
 
