--- a/source/posts/2014/12-21-podcast-02-43.md.erb
+++ b/source/posts/2014/12-21-podcast-02-43.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "43 выпуск 02 сезона. и прочее"
+title: "43 выпуск 02 сезона. Релизы Rails 4.2, PostgreSQL 9.4, jQuery 1.11.2 и 2.1.3, Evil Icons, Converse.js и прочее"
 date: 2014-12-21
 tags:
  - podcasts
@@ -17,11 +17,18 @@ main_image: "/images/static/02/0243.png"
 ## Ruby
 
  - Релизы [Rails 4.2](http://weblog.rubyonrails.org/2014/12/19/Rails-4-2-final/) и [PostgreSQL 9.4](http://www.postgresql.org/about/news/1557/). [Vulnerability announced: update your Git clients](https://github.com/blog/1938-git-client-vulnerability-announced)
+ - [Hashie Considered Harmful](http://www.schneems.com/2014/12/15/hashie-considered-harmful.html) и [Benchmarking Ruby with GCC (4.4, 4.7, 4.8, 4.9) and Clang (3.2, 3.3, 3.4, 3.5)](https://p8952.info/ruby/2014/12/12/benchmarking-ruby-with-gcc-and-clang.html)
+ - [A Ruby refactor: exploring dependency injection options](http://brandonhilkert.com/blog/a-ruby-refactor-exploring-dependency-injection-options/) и [The 7 Best Free Ruby Tutorials for Beginners](http://www.slothygeek.com/the-7-best-free-ruby-tutorials-for-beginners/)
 
 ## JavaScript
 
-
+ - Релиз [jQuery 1.11.2 и 2.1.3](http://blog.jquery.com/2014/12/18/jquery-1-11-2-and-2-1-3-released-safari-fail-safe-edition/) и [Libscore](http://libscore.com/)
+ - [The 5 Most Popular Frontend Frameworks of 2014 Compared](http://www.sitepoint.com/5-most-popular-frontend-frameworks-compared/) и [Converse.js - a free and open-source XMPP chat client for your website](https://conversejs.org/)
  - [Evil Icons](http://evil-icons.io/) и [SVG Loaders](http://samherbert.net/svg-loaders/)
+
+## Обсуждаем
+
+ - [JavaScript Application Architecture On The Road To 2015](https://medium.com/@addyosmani/javascript-application-architecture-on-the-road-to-2015-d8125811101b)
 
 
 READMORE
