--- a/source/posts/2014/12-21-podcast-02-43.md.erb
+++ b/source/posts/2014/12-21-podcast-02-43.md.erb
@@ -28,7 +28,11 @@ main_image: "/images/static/02/0243.png"
 
 ## Обсуждаем
 
+ - [Web Design Trends To Look Out For In 2015](http://www.elegantthemes.com/blog/resources/web-design-trends-to-look-out-for-in-2015)
  - [JavaScript Application Architecture On The Road To 2015](https://medium.com/@addyosmani/javascript-application-architecture-on-the-road-to-2015-d8125811101b)
+ - [Web Development Trends For 2015 And Beyond](https://medium.com/@shijuvar/web-development-trends-for-2015-and-beyond-c2d3c1ef5718)
+ - [The Languages And Frameworks That You Should Learn In 2015](http://tutorialzine.com/2014/12/the-languages-and-frameworks-that-you-should-learn-in-2015/)
+ - [Best web technologies and tools for 2015](http://www.htmlxprs.com/post/21/best-web-technologies-and-tools-for-2015)
 
 
 READMORE
